--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1232,6 +1232,7 @@ CONFIG_CUSTOM_KERNEL_LCM="nt35521_hd720_dsi_vdo ili9881c_hd720_dsi_vdo"
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="1280"
 CONFIG_LCM_WIDTH="720"
