--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -533,6 +533,12 @@ config POCKETMOD
 	  toggle this on/off from sysfs later (should they
 	  want it)
 
+config MEMORY_STATE_TIME
+	tristate "Memory freq/bandwidth time statistics"
+	depends on PROFILING
+	help
+	  Memory time statistics exported to /sys/kernel/memory_state_time
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
