--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1170,7 +1170,7 @@ CONFIG_MTK_LOCK_DEBUG=y
 # CONFIG_MT_RT_THROTTLE_MON is not set
 # CONFIG_PREEMPT_MONITOR is not set
 CONFIG_PRINTK_PROCESS_INFO=y
-CONFIG_MT_PRINTK_UART_CONSOLE=y
+# CONFIG_MT_PRINTK_UART_CONSOLE is not set
 CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=10
