fix build...not tested

--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -212,7 +212,7 @@ CONFIG_MTK_PWM=y
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 CONFIG_MTK_MC3410_NEW=y
 # zhuyifeng
-CONFIG_MTK_KXTJ2_1009_NEW=y
+# CONFIG_MTK_KXTJ2_1009_NEW is not set
 CONFIG_CUSTOM_KERNEL_ALSPS=y
 CONFIG_MTK_EPL259X=y
 # CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
@@ -298,6 +298,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_MTK=y
 CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT=y
+#CONFIG_TOUCHSCREEN_MTK_FT6206 is not set
 #CONFIG_GT1151_FIRMWARE="firmware1"
 #CONFIG_GT1151_CONFIG="config1"
 CONFIG_GTP_DRIVER_SEND_CFG=y
@@ -483,3 +484,5 @@ CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_LIBCRC32C=y
+
+CONFIG_MTK_MC3XXX_AUTO=y
