--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -162,7 +162,7 @@ CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 # CONFIG_BPF_SYSCALL is not set
 CONFIG_SHMEM=y
-CONFIG_AIO=y
+# CONFIG_AIO is not set
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
