--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -3536,3 +3536,4 @@ CONFIG_FONT_SUPPORT=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
+CONFIG_ANDROID_INTF_ALARM_DEV=y
