defconfig: re-generate, disable ZRAM & SWAP

--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.19 Kernel Configuration
+# Linux/arm64 3.18.48 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -12,6 +12,7 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_STACKTRACE_SUPPORT=y
+CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
@@ -42,7 +43,7 @@ CONFIG_CROSS_COMPILE="aarch64-linux-android-"
 CONFIG_LOCALVERSION="-Team_M.A.D."
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -245,8 +246,10 @@ CONFIG_BLOCK_COMPAT=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -541,9 +544,24 @@ CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 CONFIG_INET_DIAG_DESTROY=y
 CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_DCTCP is not set
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -1037,7 +1055,7 @@ CONFIG_OF_RESERVED_MEM=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
-CONFIG_ZRAM=y
+# CONFIG_ZRAM is not set
 # CONFIG_ZRAM_LZ4_COMPRESS is not set
 # CONFIG_ZRAM_LZ4K_COMPRESS is not set
 # CONFIG_ZRAM_DEBUG is not set
@@ -1078,6 +1096,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
+CONFIG_POCKETMOD=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1706,6 +1725,9 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SUR40 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
+CONFIG_TOUCHSCREEN_SMARTWAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
+CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT1151 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT928 is not set
@@ -2865,7 +2887,6 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
@@ -3512,8 +3533,3 @@ CONFIG_FONT_SUPPORT=y
 CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
-
-# Smartwake
-CONFIG_TOUCHSCREEN_SMARTWAKE=y
-CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
-CONFIG_POCKETMOD=y
