defconfig: disable AEE

--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1428,9 +1428,9 @@ CONFIG_MTK_LENS_LC898212AF_SUPPORT=y
 # CONFIG_MTK_LASER_STMVL53L0_SUPPORT is not set
 CONFIG_MTK_FLASHLIGHT=y
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
-CONFIG_MTK_AEE_FEATURE=y
-CONFIG_MTK_AEE_AED=y
-CONFIG_MTK_AEE_IPANIC=y
+# CONFIG_MTK_AEE_FEATURE is not set
+# CONFIG_MTK_AEE_AED is not set
+# CONFIG_MTK_AEE_IPANIC is not set
 # CONFIG_MTK_AEE_POWERKEY_HANG_DETECT is not set
 # CONFIG_MTK_AEE_MRDUMP is not set
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
