--- a/arch/arm64/configs/cp_n3_defconfig
+++ b/arch/arm64/configs/cp_n3_defconfig
@@ -1055,7 +1055,6 @@ CONFIG_UID_STAT=y
 # CONFIG_UID_SYS_STATS is not set
 CONFIG_POCKETMOD=y
 # CONFIG_MEMORY_STATE_TIME is not set
-CONFIG_MADOS=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1212,7 +1211,7 @@ CONFIG_CUSTOM_KERNEL_LCM="otm1284a_by_cpt_5p5_vdo_hd_8676 otm1283a_by_lg_5p5_vdo
 CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
-# CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY is not set
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="1280"
 CONFIG_LCM_WIDTH="720"
@@ -1399,6 +1398,7 @@ CONFIG_MTK_WAPI_SUPPORT=y
 CONFIG_MTK_PASSPOINT_R1_SUPPORT=y
 # CONFIG_MTK_PASSPOINT_R2_SUPPORT is not set
 CONFIG_MTK_WIFI_MCC_SUPPORT=y
+# CONFIG_MTK_DHCPV6C_WIFI is not set
 CONFIG_MTK_CONN_LTE_IDC_SUPPORT=y
 CONFIG_GPS=y
 CONFIG_MTK_GPS=y
@@ -1706,7 +1706,7 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 CONFIG_TOUCHSCREEN_SMARTWAKE=y
-# CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE is not set
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
 CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT1151 is not set
