--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -534,6 +534,13 @@ config POCKETMOD
 	  toggle this on/off from sysfs later (should they
 	  want it)
 
+config UID_SYS_STATS_DEBUG
+	bool "Per-TASK statistics"
+	depends on UID_SYS_STATS
+	default n
+	help
+	  Per TASK based io statistics exported to /proc/uid_io
+
 config MEMORY_STATE_TIME
 	tristate "Memory freq/bandwidth time statistics"
 	depends on PROFILING
