cpn3lite: use correct battery capacity (2500) and fix build

--- a/arch/arm64/configs/cp_n3lite_defconfig
+++ b/arch/arm64/configs/cp_n3lite_defconfig
@@ -1150,7 +1150,7 @@ CONFIG_CUSTOM_KERNEL_IMGSENSOR="ar1335_mipi_raw ar1335_qtech_mipi_raw ov5648_mip
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 # CONFIG_TABLET_PROJECT is not set
 CONFIG_YULONG_BATTERY_2500MA=y
-CONFIG_YULONG_BATTERY_3000MA=y
+# CONFIG_YULONG_BATTERY_3000MA is not set
 # CONFIG_MTK_GPT_COMMON is not set
 CONFIG_MTK_SERIAL=y
 CONFIG_MTK_SERIAL_CONSOLE=y
