--- a/drivers/misc/mediatek/connectivity/Kconfig
+++ b/drivers/misc/mediatek/connectivity/Kconfig
@@ -283,11 +283,6 @@ config MTK_WIFI_MCC_SUPPORT
 	   if it is set to TRUE, wlan will support Multi-Channel Concurrency,
 	   otherwise, only support Single Channel Concurrency
 
-config MTK_DHCPV6C_WIFI
-	bool "MTK_DHCPV6C_WIFI"
-	help
-	  no: disable this feature
-
 config MTK_CONN_LTE_IDC_SUPPORT
 	bool "MediaTek CONN LTE IDC support"
 	select MTK_CONN_MD
@@ -368,3 +363,7 @@ config MTK_MERGE_INTERFACE_SUPPORT
 		path. FM audio path will use PCM/I2S merge
 		interface is set to 'y',
 		otherwise merge interface is not used.
+
+config MTK_AOSP_TETHERING
+	bool "Enables AOSP wlan0 for wifi tethering"
+	default y
