--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1340,7 +1340,7 @@ CONFIG_MTK_RAM_CONSOLE_SIZE=0x3000
 CONFIG_MTK_RAM_CONSOLE_ADDR=0xF912D000
 CONFIG_MTK_RAM_CONSOLE_DRAM_SIZE=0x10000
 CONFIG_MTK_RAM_CONSOLE_DRAM_ADDR=0x43F00000
-CONFIG_HAVE_XLOG_SUPPORT=y
+# CONFIG_HAVE_XLOG_SUPPORT is not set
 
 #
 # MTK runqueue statistic calculation and CPU affinity
@@ -1457,12 +1457,12 @@ CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 # CONFIG_MTK_AEE_MRDUMP is not set
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 CONFIG_MTK_RTC=y
-CONFIG_MTK_ATF_LOGGER=y
+# CONFIG_MTK_ATF_LOGGER is not set
 # CONFIG_SSUSB_DRV is not set
 # CONFIG_SSUSB_MU3_PHY is not set
 # CONFIG_SSUSB_MTK_XHCI is not set
 # CONFIG_SSUSB_MTK_TEST_XHCI is not set
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_MLOG is not set
 CONFIG_MTK_EMI_BWL=y
 # CONFIG_MTK_EMI_D1P is not set
 CONFIG_MTK_EMI_D2P=y
