defconfig: re-generate

--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.70 Kernel Configuration
+# Linux/arm64 3.18.71 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -1232,6 +1232,9 @@ CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali midgard r18p0"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 # CONFIG_MTK_GPU_R5P0 is not set
+# CONFIG_MTK_GPU_SAPPHIRE_LITE is not set
+# CONFIG_SW_SYNC64 is not set
+# CONFIG_MTK_GPU_SPM_DVFS_SUPPORT is not set
 CONFIG_MTK_MMPROFILE_SUPPORT=y
 CONFIG_MMPROFILE=y
 CONFIG_MTK_LCM=y
@@ -1249,6 +1252,9 @@ CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
 CONFIG_MTK_AAL_SUPPORT=y
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_SINGLE_PANEL_OUTPUT is not set
+# CONFIG_MTK_OVERLAY_ENGINE_SUPPORT is not set
+# CONFIG_MTK_CONSUMER_PARTIAL_UPDATE_SUPPORT is not set
+CONFIG_MTK_PQ_COLOR_MODE="DISP"
 # CONFIG_MTK_CQDMA is not set
 CONFIG_MTK_DRAMC=y
 CONFIG_MTK_SYNC=y
@@ -1376,12 +1382,6 @@ CONFIG_MT_SCHED_INTEROP=y
 #
 # CONFIG_MTK_DYNAMIC_BOOST is not set
 # CONFIG_HAVE_MTK_IN_HOUSE_TEE_SUPPORT is not set
-CONFIG_MTK_FMRADIO=y
-CONFIG_MTK_FM=y
-CONFIG_MTK_FM_SUPPORT=y
-CONFIG_MTK_FM_CHIP="MT6625_FM"
-# CONFIG_MTK_FM_50KHZ_SUPPORT is not set
-# CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 CONFIG_MTK_IMGSENSOR=y
 # CONFIG_MTK_EFUSE_DOWNGRADE is not set
 # CONFIG_MTK_MULTIBRIDGE_SUPPORT is not set
@@ -1390,15 +1390,19 @@ CONFIG_MTK_COMBO=y
 # CONFIG_MTK_COMBO_CHIP_MT6620 is not set
 # CONFIG_MTK_COMBO_CHIP_MT6628 is not set
 # CONFIG_MTK_COMBO_CHIP_MT6630 is not set
+# CONFIG_MTK_COMBO_CHIP_MT6632 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6572 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6582 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_8127 is not set
+# CONFIG_MTK_COMBO_CHIP_CONSYS_7623 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6752 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6592 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_8163 is not set
 CONFIG_MTK_COMBO_CHIP_CONSYS_6735=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6755 is not set
+# CONFIG_MTK_COMBO_CHIP_CONSYS_6757 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6580 is not set
+# CONFIG_MTK_COMBO_CHIP_CONSYS_6570 is not set
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6797 is not set
 CONFIG_MTK_COMBO_CHIP="CONSYS_6735"
 CONFIG_MTK_COMBO_PLAT_PATH=""
@@ -1416,6 +1420,12 @@ CONFIG_GPS=y
 CONFIG_MTK_GPS=y
 CONFIG_MTK_GPS_SUPPORT=y
 # CONFIG_MTK_GPS_REGISTER_SETTING is not set
+# CONFIG_MTK_GPS_EMI is not set
+CONFIG_MTK_FMRADIO=y
+CONFIG_MTK_FM_CHIP="MT6625_FM"
+# CONFIG_MTK_FM_50KHZ_SUPPORT is not set
+# CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
+CONFIG_MTK_AOSP_TETHERING=y
 CONFIG_MTK_CONN_MD=y
 CONFIG_MTK_NFC=y
 # CONFIG_NFC_MT6605 is not set
