--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1184,10 +1184,11 @@ CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=10
 CONFIG_MT_BOOT_TIME_CPU_BOOST=y
 CONFIG_USB_MTK_HDRC=y
-CONFIG_USB_MTK_HDRC_HCD=y
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
 CONFIG_USB_MTK_OTG=y
 # CONFIG_MTK_UART_USB_SWITCH is not set
+# CONFIG_MTK_MUSB_CARPLAY_SUPPORT is not set
+# CONFIG_MTK_MUSB_SW_WITCH_MODE is not set
 # CONFIG_MTK_USBFSH is not set
 # CONFIG_MTK_ICUSB_SUPPORT is not set
 # CONFIG_MTK_DT_USB_SUPPORT is not set
@@ -2650,16 +2651,23 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 #
 # USB Peripheral Controller
 #
+# CONFIG_USB_FOTG210_UDC is not set
+# CONFIG_USB_GR_UDC is not set
 # CONFIG_USB_R8A66597 is not set
 # CONFIG_USB_PXA27X is not set
+# CONFIG_USB_MV_UDC is not set
 # CONFIG_USB_MV_U3D is not set
 # CONFIG_USB_M66592 is not set
 # CONFIG_USB_NET2272 is not set
+# CONFIG_USB_GADGET_XILINX is not set
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
-CONFIG_USB_F_SERIAL=y
+CONFIG_USB_F_MASS_STORAGE=y
+# CONFIG_USB_CONFIGFS is not set
+CONFIG_USB_G_ANDROID=y
+# CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
 # CONFIG_USB_ETH is not set
@@ -2670,8 +2678,6 @@ CONFIG_USB_F_SERIAL=y
 # CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-CONFIG_USB_G_ANDROID=y
-# CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_G_MULTI is not set
