defconfig: disable NFC

--- a/arch/arm64/configs/len6737m_65_m0_defconfig
+++ b/arch/arm64/configs/len6737m_65_m0_defconfig
@@ -1429,9 +1429,7 @@ CONFIG_MTK_FM_CHIP="MT6625_FM"
 # CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 CONFIG_MTK_AOSP_TETHERING=y
 CONFIG_MTK_CONN_MD=y
-CONFIG_MTK_NFC=y
-# CONFIG_NFC_MT6605 is not set
-# CONFIG_NFC_MSR3110 is not set
+# CONFIG_MTK_NFC is not set
 CONFIG_MTK_LENS=y
 CONFIG_MTK_LENS_DUMMYLENS_SUPPORT=y
 # CONFIG_MTK_LENS_BU63165AF_SUPPORT is not set
