--- a/arch/arm64/configs/cp_n3_defconfig
+++ b/arch/arm64/configs/cp_n3_defconfig
@@ -179,7 +179,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_SLUB_DEBUG is not set
-CONFIG_COMPAT_BRK=y
+# CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
@@ -355,7 +355,7 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 # CONFIG_KSM is not set
-CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
@@ -715,7 +715,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-# CONFIG_IP_NF_MATCH_RPFILTER is not set
+CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -1089,6 +1089,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_SYS_STATS=y
+# CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_MADOS=y
 # CONFIG_C2PORT is not set
@@ -1194,6 +1195,8 @@ CONFIG_USB_MTK_HDRC=y
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
 CONFIG_USB_MTK_OTG=y
 # CONFIG_MTK_UART_USB_SWITCH is not set
+# CONFIG_MTK_MUSB_CARPLAY_SUPPORT is not set
+# CONFIG_MTK_MUSB_SW_WITCH_MODE is not set
 # CONFIG_MTK_USBFSH is not set
 # CONFIG_MTK_ICUSB_SUPPORT is not set
 # CONFIG_MTK_DT_USB_SUPPORT is not set
@@ -1237,9 +1240,12 @@ CONFIG_CUSTOM_KERNEL_SSW="ssw_single_v2"
 CONFIG_MTK_DEVAPC_DRIVER=y
 CONFIG_MTK_DEVINFO_DRIVER=y
 CONFIG_MTK_GPU_SUPPORT=y
-CONFIG_MTK_GPU_VERSION="mali midgard r7p0"
+CONFIG_MTK_GPU_VERSION="mali midgard r18p0"
 CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 # CONFIG_MTK_GPU_R5P0 is not set
+# CONFIG_MTK_GPU_SAPPHIRE_LITE is not set
+# CONFIG_SW_SYNC64 is not set
+# CONFIG_MTK_GPU_SPM_DVFS_SUPPORT is not set
 CONFIG_MTK_MMPROFILE_SUPPORT=y
 CONFIG_MMPROFILE=y
 CONFIG_MTK_LCM=y
@@ -1257,6 +1263,9 @@ CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
 CONFIG_MTK_AAL_SUPPORT=y
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_SINGLE_PANEL_OUTPUT is not set
+# CONFIG_MTK_OVERLAY_ENGINE_SUPPORT is not set
+# CONFIG_MTK_CONSUMER_PARTIAL_UPDATE_SUPPORT is not set
+CONFIG_MTK_PQ_COLOR_MODE="DISP"
 # CONFIG_MTK_CQDMA is not set
 CONFIG_MTK_DRAMC=y
 CONFIG_MTK_SYNC=y
@@ -1359,7 +1368,7 @@ CONFIG_MTK_RAM_CONSOLE_SIZE=0x3000
 CONFIG_MTK_RAM_CONSOLE_ADDR=0xF912D000
 CONFIG_MTK_RAM_CONSOLE_DRAM_SIZE=0x10000
 CONFIG_MTK_RAM_CONSOLE_DRAM_ADDR=0x43F00000
-CONFIG_HAVE_XLOG_SUPPORT=y
+# CONFIG_HAVE_XLOG_SUPPORT is not set
 
 #
 # MTK runqueue statistic calculation and CPU affinity
@@ -1399,12 +1408,6 @@ CONFIG_MTK_SCHED_CMP_TGS_WAKEUP=y
 #
 # CONFIG_MTK_DYNAMIC_BOOST is not set
 # CONFIG_HAVE_MTK_IN_HOUSE_TEE_SUPPORT is not set
-CONFIG_MTK_FMRADIO=y
-CONFIG_MTK_FM=y
-CONFIG_MTK_FM_SUPPORT=y
-CONFIG_MTK_FM_CHIP="MT6625_FM"
-# CONFIG_MTK_FM_50KHZ_SUPPORT is not set
-# CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 CONFIG_MTK_IMGSENSOR=y
 # CONFIG_YL_CAM_MODULE_NAME is not set
 # CONFIG_MTK_MULTIBRIDGE_SUPPORT is not set
@@ -1439,10 +1442,15 @@ CONFIG_GPS=y
 CONFIG_MTK_GPS=y
 CONFIG_MTK_GPS_SUPPORT=y
 # CONFIG_MTK_GPS_REGISTER_SETTING is not set
+CONFIG_MTK_FMRADIO=y
+CONFIG_MTK_FM=y
+CONFIG_MTK_FM_SUPPORT=y
+CONFIG_MTK_FM_CHIP="MT6625_FM"
+# CONFIG_MTK_FM_50KHZ_SUPPORT is not set
+# CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
+CONFIG_MTK_AOSP_TETHERING=y
 CONFIG_MTK_CONN_MD=y
-CONFIG_MTK_NFC=y
-CONFIG_NFC_MT6605=y
-# CONFIG_NFC_MSR3110 is not set
+# CONFIG_MTK_NFC is not set
 CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
 # CONFIG_MTK_LENS_BU63165AF_SUPPORT is not set
@@ -1481,12 +1489,12 @@ CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 # CONFIG_MTK_AEE_MRDUMP is not set
 CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 CONFIG_MTK_RTC=y
-CONFIG_MTK_ATF_LOGGER=y
+# CONFIG_MTK_ATF_LOGGER is not set
 # CONFIG_SSUSB_DRV is not set
 # CONFIG_SSUSB_MU3_PHY is not set
 # CONFIG_SSUSB_MTK_XHCI is not set
 # CONFIG_SSUSB_MTK_TEST_XHCI is not set
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_MLOG is not set
 CONFIG_MTK_EMI_BWL=y
 # CONFIG_MTK_EMI_D1P is not set
 # CONFIG_MTK_EMI_D2P is not set
@@ -1827,8 +1835,7 @@ CONFIG_TTY=y
 # CONFIG_VT is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
-CONFIG_LEGACY_PTYS=y
-CONFIG_LEGACY_PTY_COUNT=16
+# CONFIG_LEGACY_PTYS is not set
 # CONFIG_SERIAL_NONSTANDARD is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
@@ -2888,7 +2895,10 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 CONFIG_USB_LIBCOMPOSITE=y
 CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
-CONFIG_USB_F_SERIAL=y
+CONFIG_USB_F_MASS_STORAGE=y
+# CONFIG_USB_CONFIGFS is not set
+CONFIG_USB_G_ANDROID=y
+# CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
 # CONFIG_USB_ETH is not set
@@ -2899,8 +2909,6 @@ CONFIG_USB_F_SERIAL=y
 # CONFIG_USB_G_SERIAL is not set
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-CONFIG_USB_G_ANDROID=y
-# CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_G_MULTI is not set
@@ -3115,6 +3123,7 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
@@ -3292,6 +3301,13 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
 
 #
@@ -3438,7 +3454,7 @@ CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
+CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
 CONFIG_DEBUG_KERNEL=y
 
 #
@@ -3466,7 +3482,6 @@ CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
 CONFIG_SCHED_STACK_END_CHECK=y
-CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 
 #
@@ -3486,11 +3501,11 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
-# CONFIG_DEBUG_LIST is not set
+CONFIG_DEBUG_LIST=y
 # CONFIG_DEBUG_PI_LIST is not set
-# CONFIG_DEBUG_SG is not set
-# CONFIG_DEBUG_NOTIFIERS is not set
-# CONFIG_DEBUG_CREDENTIALS is not set
+CONFIG_DEBUG_SG=y
+CONFIG_DEBUG_NOTIFIERS=y
+CONFIG_DEBUG_CREDENTIALS=y
 
 #
 # RCU Debugging
@@ -3554,10 +3569,10 @@ CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY_PERF_EVENTS_RESTRICT=y
 CONFIG_SECURITY=y
-# CONFIG_SECURITYFS is not set
+CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
-# CONFIG_SECURITY_PATH is not set
+CONFIG_SECURITY_PATH=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
 CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
@@ -3567,20 +3582,22 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
-CONFIG_SECURITY_SELINUX_DEVELOP=y
+# CONFIG_SECURITY_SELINUX_DEVELOP is not set
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
 # CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
-# CONFIG_SECURITY_YAMA is not set
+CONFIG_SECURITY_YAMA=y
+CONFIG_SECURITY_YAMA_STACKED=y
 CONFIG_INTEGRITY=y
 # CONFIG_INTEGRITY_SIGNATURE is not set
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_YAMA is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
