--- a/arch/arm64/boot/dts/mt6753.dtsi
+++ b/arch/arm64/boot/dts/mt6753.dtsi
@@ -1956,6 +1956,22 @@ initrd=0x44000000,0x300000 loglevel=8 androidboot.hardware=mt6735";
 	multibridge@0 {
 		compatible = "mediatek,multibridge";
 	};
+
+	firmware {
+		android {
+			compatible = "android,firmware";
+			fstab {
+				compatible = "android,fstab";
+				system {
+					compatible = "android,system";
+					dev = "/dev/block/platform/mtk-msdc.0/11230000.msdc0/by-name/system";
+					type = "ext4";
+					mnt_flags = "ro,lazytime,barrier=0";
+					fsmgr_flags = "wait";
+				};
+			};
+		};
+	};
 };
 
 #include "cust.dtsi"
